Specifying the sections on the resume site

--- a/html/resume.html
+++ b/html/resume.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
-    <h1 class="heading">Hello World</h1>
+    <header></header>
+    <main>
+      <!-- Profile section-->
+      <section></section>
+
+      <!-- Education section-->
+      <section></section>
+
+      <!-- Skills Section-->
+      <section></section>
+
+      <!-- Work Experience section-->
+      <section></section>
+    </main>
+    <footer></footer>
   </body>
 </html>
