--- a/html/resume.html
+++ b/html/resume.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1></h1>
+    </header>
     <main>
       <!-- Profile section-->
       <section></section>
