Adding some placeholders in the html file and specifing different sections (mark with different background color, Adding normalize.css to the stylesheet and adjust the server accordingly.

--- a/html/resume.html
+++ b/html/resume.html
@@ -5,25 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yu Jia's Online Resume</title>
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
-    <header>
-      <h1></h1>
+    <header class="header-container">
+      <h1>Yu Jia Online Resume</h1>
     </header>
     <main>
       <!-- Profile section-->
-      <section></section>
+      <section class="profile-container">
+        <p>
+          Energetic and self-motivated college graduate with web development
+          industry experience. Currently seeking a full-time opportunity that
+          will learn and apply the programming and technical skills in the field
+          of web development and information technology.
+        </p>
+      </section>
 
       <!-- Education section-->
-      <section></section>
+      <section class="education-container">
+        <p>Bachelor of Science in Computer Science.</p>
+        <p>Institutional Honor: Cum Laude</p>
+      </section>
 
       <!-- Skills Section-->
-      <section></section>
+      <section class="skills-container">
+        <p>HTML</p>
+        <p>CSS</p>
+        <p>JavaScript</p>
+        <p>React.js</p>
+        <p>Node.js</p>
+        <p>Mongo DB</p>
+      </section>
 
       <!-- Work Experience section-->
-      <section></section>
+      <section class="work-experience-container">
+        <p>Intership at NSTEM Honor Socity</p>
+      </section>
     </main>
-    <footer></footer>
+
+    <!-- Personal Projects-->
+    <section class="personal-projects-container">
+      <p>Personal Online Resume</p>
+      <p>Simple Online Cloud Storage</p>
+      <p>Simple Online Chat Room</p>
+    </section>
+
+    <!-- Basic Contact Info-->
+    <footer class="footer-container">
+      <p>Email</p>
+      <p>Phone</p>
+    </footer>
   </body>
 </html>
